tests/test_variable_state/bad/no_cross_exceptions.catala_en
## Test

```catala
declaration scope A:
  output foo content integer
    state bar
    state baz

scope A:
  label thing definition foo state bar equals 2

  definition foo state baz equals foo + 1

  exception thing definition foo state baz under condition true consequence equals 3
```

```catala-test {id="Typecheck"}
catala Typecheck 
```
